// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling 
    $12,000
  </h2>
</div>
`;

exports[`should render correctly ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     expenses totalling 
    $12,000,564
  </h2>
</div>
`;
